# RagClass

./: .gitignore  LICENSE  README.md  final.py  pyproject.toml  startup.sh
data/: civil_rights.txt
ragclass/: main.py
